syntax = "proto3";

package schema;

// import the any type
import "google/protobuf/any.proto";

message Payment {
  string principal = 1;
  string interest = 2;
}

message Terms {
  string paymentCycleAmount = 1;
  uint32 paymentCycle = 2;
  uint32 APR = 3;
}

message LoanDetails {
  string lendingToken = 1;
  string principal = 2;
  Payment totalRepaid = 3;
  uint32 timestamp = 4;
  uint32 acceptedTimestamp = 5;
  uint32 lastRepaidTimestamp = 6;
  uint32 loanDuration = 7;
}

enum BidState {
    NONEXISTENT = 0;
    PENDING = 1;
    CANCELLED = 2;
    ACCEPTED = 3;
    PAID = 4;
    LIQUIDATED = 5;
}

message Bid {
  string borrower = 1;
  string receiver = 2;
  string lender = 3;
  string marketplaceId = 4;
  string _metadatauri = 5;
  LoanDetails loanDetails = 6;
  Terms terms = 7;
  BidState state = 8;
  PaymentType paymentType = 9;
  string bid_id = 10;
  TxMeta tx_meta = 11;
}

message BidArray {
  repeated Bid elements = 1;
}

message TxMeta {
  string hash = 1;
  uint64 block_number = 2;
  uint64 timestamp = 3;
}

// MARKETPLACE EVENTS
message MarketCreated {
  string market_id = 1;
  string owner = 2;
}

message MarketsCreatedArray {
  repeated MarketCreated markets_created = 1;
}

message PaymentCycleDuration {
  string market_id = 1;
  uint32 duration = 2;
  google.protobuf.Any transaction = 3;
}

message PaymentCycleDurationArray {
  repeated PaymentCycleDuration payment_cycle_durations = 1;
}

message PaymentDefaultDuration {
  string market_id = 1;
  uint32 duration = 2;
  google.protobuf.Any transaction = 3;
}

message PaymentDefaultDurationArray {
  repeated PaymentDefaultDuration payment_default_durations = 1;
}

message BidExpirationTime {
  string market_id = 1;
  uint32 duration = 2;
  google.protobuf.Any transaction = 3;
}

message BidExpirationTimeArray {
  repeated BidExpirationTime bid_expiration_times = 1;
}

message MarketFee {
  string market_id = 1;
  uint32 fee_pct = 2;
  google.protobuf.Any transaction = 3;
}

message MarketFeeArray {
  repeated MarketFee market_fees = 1;
}

message LenderAttestation {
  string market_id = 1;
  string lender = 2;
  google.protobuf.Any transaction = 3;
}

message LenderAttestationArray {
  repeated LenderAttestation lender_attestations = 1;
}

message BorrowerAttestation {
  string market_id = 1;
  string borrower = 2;
  google.protobuf.Any transaction = 3;
}

message BorrowerAttestationArray {
  repeated BorrowerAttestation borrower_attestations = 1;
}

message LenderRevocation {
  string market_id = 1;
  string lender = 2;
  google.protobuf.Any transaction = 3;
}

message LenderRevocationArray {
  repeated LenderRevocation lender_revocations = 1;
}

message BorrowerRevocation {
  string market_id = 1;
  string borrower = 2;
  google.protobuf.Any transaction = 3;
}

message BorrowerRevocationArray {
  repeated BorrowerRevocation borrower_revocations = 1;
}

message MarketClosed {
  string market_id = 1;
  google.protobuf.Any transaction = 2;
}

message MarketsClosed {
  repeated MarketClosed markets_closed = 1;
}

message LenderExitMarket {
  string market_id = 1;
  string lender = 2;
  google.protobuf.Any transaction = 3;
}

message LenderExitMarketArray {
  repeated LenderExitMarket lender_exit_markets = 1;
}

message BorrowerExitMarket {
  string market_id = 1;
  string borrower = 2;
  google.protobuf.Any transaction = 3;
}

message BorrowerExitMarketArray {
  repeated BorrowerExitMarket borrower_exit_markets = 1;
}

message SetMarketOwner {
  string market_id = 1;
  string new_owner = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketOwnerArray {
  repeated SetMarketOwner set_market_owners = 1;
}

message SetMarketFeeRecipient {
  string market_id = 1;
  string new_recipient = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketFeeRecipientArray {
  repeated SetMarketFeeRecipient set_market_fee_recipients = 1;
}

message SetMarketLenderAttestation {
  string market_id = 1;
  bool attestation_required = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketLenderAttestationArray {
  repeated SetMarketLenderAttestation set_market_lender_attestations = 1;
}

message SetMarketBorrowerAttestation {
  string market_id = 1;
  bool attestation_required = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketBorrowerAttestationArray {
  repeated SetMarketBorrowerAttestation set_market_borrower_attestations = 1;
}

enum PaymentType {
  EMI = 0;
  BULLET = 1;
}

message SetMarketPaymentType {
  string market_id = 1;
  PaymentType payment_type = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketPaymentTypeArray {
  repeated SetMarketPaymentType set_market_payment_types = 1;
}

enum PaymentCycleType {
  SECONDS = 0;
  MONTHLY = 1;
}

message SetPaymentCycle {
  string market_id = 1;
  PaymentCycleType payment_cycle_type = 2;
  uint32 value = 3;
  google.protobuf.Any transaction = 4;
}

message SetPaymentCycleArray {
  repeated SetPaymentCycle set_market_payment_cycles = 1;
}

message SetMarketUri {
  string market_id = 1;
  string uri = 2;
  google.protobuf.Any transaction = 3;
}

message SetMarketUriArray {
  repeated SetMarketUri set_market_uris = 1;
}

// END OF MARKETPLACE EVENTS

// TELLER V2 EVENTS


message SubmittedBid {
  string bid_id = 1;
  string borrower = 2;
  string receiver = 3;
  string metadata_uri = 4;
  string lending_token = 5;
  string marketplace_id = 6;
  string principal = 7;
  string duration = 8;
  string apr = 9;
  repeated Collateral collateral = 10;
}

message Collateral {
  string collateral_type = 1;
  string collateral_amount = 2;
  string collateral_tokenId = 3;
  string collateral_address = 4;
}

message SubmittedBidArray {
  repeated SubmittedBid submitted_bids = 1;
}

message AcceptedBid {
  string bid_id = 1;
  string lender = 2;
  google.protobuf.Any transaction = 3;
}

message AcceptedBidArray {
  repeated AcceptedBid accepted_bids = 1;
}

message CancelledBid {
  string bid_id = 1;
  google.protobuf.Any transaction = 2;
}

message CancelledBidArray {
  repeated CancelledBid cancelled_bids = 1;
}

message MarketOwnerCancelledBid {
  string bid_id = 1;
  google.protobuf.Any transaction = 2;
}

message MarketOwnerCancelledBidArray {
  repeated MarketOwnerCancelledBid market_owner_cancelled_bids = 1;
}

message LoanRepayment {
  string bid_id = 1;
  google.protobuf.Any transaction = 2;
}

message LoanRepaymentArray {
  repeated LoanRepayment loan_repayments = 1;
}

message LoanRepaid {
  string bid_id = 1;
  google.protobuf.Any transaction = 2;
}

message LoanRepaidArray {
  repeated LoanRepaid loan_repaid = 1;
}

message LoanLiquidated {
  string bid_id = 1;
  string liquidator = 2;
  google.protobuf.Any transaction = 3;
}

message LoanLiquidationArray {
  repeated LoanLiquidated loan_liquidations = 1;
}

// END TELLER V2 EVENTS


